--- a/src/package.json
+++ b/src/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.21"
   }
 }
