--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
