--- a/src/package.json
+++ b/src/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.15.0",
+    "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.21"
   }
 }
